--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,7 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
+            <version>42.7.5</version>
         </dependency>
         <dependency>
           <groupId>com.microsoft.sqlserver</groupId>
